# tethys-cdsapi

./: .gitignore  README.md  main.py  parameters.yml  pyproject.toml  setup.py  testing.py
conda/: meta.yaml
tethys_cdsapi/: __init__.py  downloader  downloader.py  era5_mappings.csv  tethys.py  utils.py  virtual_parameters.py
tethys_cdsapi/tests/: parameters.yml  testing.py  utest_cdsapi.py  utest_downloader.py  utest_era5.py
