[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tethys-cdsapi"
version = '0.2.3'
description = "utilities for downloading and processing CDS data"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Mike Kittridge", email = "mullenkamp1@gmail.com" },
]
keywords = [
    "cdsapi",
    "tethys",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "urllib3",
    "requests",
    "cdsapi>=0.7.2",
    "pandas<3",
]

[project.urls]
Homepage = "https://github.com/tethys-ts/tethys-cdsapi"

[tool.hatch.envs.default]
python = "3.9"
dependencies = [
  "spyder-kernels==2.4",
  "matplotlib",
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.build.targets.sdist]
include = [
    "/tethys_cdsapi",
]
